# Project name
PROJECT(core)

# Module Curl
FIND_PACKAGE(CURL REQUIRED)
# Module Log4cxx
FIND_PACKAGE(LOG4CXX REQUIRED)
# Module Libxm2
FIND_PACKAGE(LIBXML2 REQUIRED)
# Module MySQL
FIND_PACKAGE(MySQL REQUIRED)
# Module Hiredis
FIND_PACKAGE(HIREDIS REQUIRED)

# Header directories
INCLUDE_DIRECTORIES(
	${CURL_INCLUDE_DIRS}
	${LOG4CXX_INCLUDE_DIRS}
	${LIBXML2_INCLUDE_DIRS}
	${MYSQL_INCLUDE_DIRS}
	${HIREDIS_INCLUDE_DIRS}
	${PROJECT_SOURCE_DIR}
	../protocol
	)

# source files
FILE(GLOB_RECURSE SRC_LIST . "*.cpp" "*.c" "*.h" "*.hpp")  
AUX_SOURCE_DIRECTORY(. SRC_LIST)

# Generate library
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LIST})
# Link libraries
TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	dl
	apr-1
	aprutil-1
	${CURL_LIBRARIES} 
	${LOG4CXX_LIBRARIES} 
	${LIBXML2_LIBRARIES}
	${MYSQL_LIBRARIES}
	${HIREDIS_LIBRARIES}
	)

# Output library
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${LIB_PREFIX}${PROJECT_NAME})