# Project name
PROJECT(scene)

# Module Protobuf
FIND_PACKAGE(Protobuf REQUIRED NO_MODULE)
# Header directories
INCLUDE_DIRECTORIES(
	${PROTOBUF_INCLUDE_DIRS}
	${CMAKE_BINARY_DIR}/src
	)

# All source files
AUX_SOURCE_DIRECTORY(. SRC_LIST) 

# Generate binary
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
# Link libraries
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROTOBUF_LIBRARIES} proto core)

# Treat warnings as errors
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "/WX")

# Install binary
INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${BINARY_OUTPUTPATH})
